# fitz-block-repair

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: demo.py
examples/artifacts/: report_SR.md
src/textblock_clustering/: __init__.py  clustering.py  constants.py  exceptions.py  structures.py  types.py  watermark.py
